/**
 * Custom exception class for Appointment validation.
 * Demonstrates Exception Handling in Java.
 */
public class InvalidAppointmentException extends Exception {
    public InvalidAppointmentException(String message) {
        super(message);
    }
}
